--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -9,11 +9,11 @@ on:
   schedule:
     - cron: "0 0 * * *"
   push:
-    branches: [ $default-branch ]
+    branches: [ master ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
   pull_request:
-    branches: [ $default-branch ]
+    branches: [ master ]
 
 env:
   # github.repository as <account>/<repo>
