--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -21,8 +21,7 @@ env:
 
 
 jobs:
-  build:
-
+  setup:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -65,9 +64,21 @@ jobs:
         with:
           images: ${{ env.IMAGE_NAME }}
 
-      # Build and push Docker image with Buildx (don't push on PR)
+  build:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      # This is used to complete the identity challenge
+      # with sigstore/fulcio when running outside of PRs.
+      id-token: write
+    strategy:
+      matrix:
+        version: [ 3, 3.15 ]
+    steps:
+        # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
-      - name: Build and push Docker image
+      - name: Build and push Alpine 3
         id: build-and-push
         uses: docker/build-push-action@ac9327eae2b366085ac7f6a2d02df8aa8ead720a
         with:
@@ -75,6 +86,7 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: latest
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: ALPINE_VERSION=${{ matrix.version }}
 
       # Sign the resulting Docker image digest except on PRs.
       # This will only write to the public Rekor transparency log when the Docker
