--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -37,13 +37,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-#      # Install the cosign tool except on PR
-#      # https://github.com/sigstore/cosign-installer
-#      - name: Install cosign
-#        if: github.event_name != 'pull_request'
-#        uses: sigstore/cosign-installer@d6a3abf1bdea83574e28d40543793018b6035605
-#        with:
-#          cosign-release: 'v1.7.1'
+      #      # Install the cosign tool except on PR
+      #      # https://github.com/sigstore/cosign-installer
+      #      - name: Install cosign
+      #        if: github.event_name != 'pull_request'
+      #        uses: sigstore/cosign-installer@d6a3abf1bdea83574e28d40543793018b6035605
+      #        with:
+      #          cosign-release: 'v1.7.1'
 
 
       # Workaround: https://github.com/docker/build-push-action/issues/461
@@ -68,13 +68,13 @@ jobs:
           images: ${{ env.IMAGE_NAME }}
         # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
-      - name: Build and push Alpine 3
+      - name: Build and push
         id: build-and-push
         uses: docker/build-push-action@ac9327eae2b366085ac7f6a2d02df8aa8ead720a
         with:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
-          tags: latest
+          tags: ${{matrix.version}}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: ALPINE_VERSION=${{ matrix.version }}
 
