--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -64,6 +64,7 @@ jobs:
         uses: docker/build-push-action@ac9327eae2b366085ac7f6a2d02df8aa8ead720a
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: byrnedo/alpine-curl:${{matrix.version}}
           labels: ${{ steps.meta.outputs.labels }}
