--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -24,7 +24,7 @@ jobs:
   build:
     strategy:
       matrix:
-        version: [ 3, 3.15, 3.16, 3.17, latest ]
+        version: [ 3, 3.15, 3.16, 3.17, 3.18, latest ]
     runs-on: ubuntu-latest
     permissions:
       contents: read
